--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -1,4 +1,4 @@
-<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/xseksr305/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/xseksr305/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/xseksr305/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/xseksr305/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/xseksr305/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/xseksr305/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/xseksr305/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/xseksr305/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/xseksr305/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/xseksr305/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/xseksr305/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/xseksr305/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/xseksr305/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/xseksr305/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/xseksr305/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/xseksr305/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/xseksr305/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/xseksr305/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/xseksr305/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/xseksr305/www/master/t/djy/12a.jpg" title="头条"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p> <a href="https://tt6.jugd53.ml/trcxpzh/h513r" target="_blank">动态网</a> | <a href="https://tt6.jugd53.ml/trcxpzh/i11b" target="_blank">看中国</a> | <a href="https://git.io/fjHpI" target="_blank">新纪元</a> | <a href="https://tt6.jugd53.ml/trcxpzh/r12g" target="_blank">无界</a> | <a href="https://tt6.jugd53.ml/trcxpzh/f8c" target="_blank">退党</a> | <a href="https://git.io/fjHpT" target="_blank">网门</a> | <a href="https://tt6.jugd53.ml/trcxpzh/l4e" target="_blank">神韵</a> | <a href="https://tt6.jugd53.ml/trcxpzh/w12l" target="_blank">圣缘</a> | <a href="https://tt6.jugd53.ml/trcxpzh/w3i" target="_blank">明慧网</a> | <a href="https://tt6.jugd53.ml/trcxpzh/t10f" target="_blank">正见网</a> | <a href="https://tt6.jugd53.ml/trcxpzh/f9w" target="_blank">希望之声</a> | <a href="https://gitlab.com/szzdlab/w1/raw/master/5Vu3_XS2V.mp4" target="_blank">无罪辩护</a> |  <a href="https://gitlab.com/szzdlab/w5/raw/master/zjmd1_19.mp4" target="_blank">终级目的</a> |<a href="https://gitlab.com/szzdlab/w5/raw/master/mtdwh.mp4" target="_blank">漫谈党文化</a ></p><p><a href="https://tt6.jugd53.ml/trcxpzh/c7x" target="_blank">大纪元</a> | <a href="https://tt6.jugd53.ml/trcxpzh/h5n" target="_blank">新唐人</a> | <a href="https://git.io/JervF" target="_blank">亚太台</a> | <a href="https://git.io/fjHpG" target="_blank">直播</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2014-1-7/zfzx.mp4" target="_blank">伪火</a > | <a href="https://gitlab.com/szzdlab/w5/raw/master/5N.8.mp4" target="_blank">罪恶</a > | <a href="https://gitlab.com/szzdlab/w3/raw/master/9p.mp4" target="_blank">九评</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/wl.mp4" target="_blank">神话</a> | <a href="https://gitlab.com/szzdlab/w2/raw/master/3t/TdowhauWx9WiM.mp4" target="_blank">藏字石</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/szt.mp4" target="_blank">寻正道</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/wm.mp4" target="_blank">告诉未来</a > | <a href="https://gitlab.com/szzdlab/w3/raw/master/qh.mp4" target="_blank">清华学子</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2013-10-28/hongchaoyinmou-hi.mp4" target="_blank">红朝阴谋</a > |<a href="https://gitlab.com/szzdlab/w5/raw/master/fy.mp4" target="_blank">风雨天地行</a></p></td></tr>
+<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/xseksr305/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/xseksr305/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/xseksr305/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/xseksr305/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/xseksr305/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/xseksr305/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/xseksr305/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/xseksr305/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/xseksr305/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/xseksr305/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/xseksr305/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/xseksr305/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/xseksr305/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/xseksr305/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/xseksr305/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/xseksr305/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/xseksr305/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/xseksr305/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/xseksr305/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/xseksr305/www/master/t/djy/12a.jpg" title="头条"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p> <a href="https://tt6.jugd53.ml/gmbbbxl/i513k" target="_blank">动态网</a> | <a href="https://tt6.jugd53.ml/gmbbbxl/l11t" target="_blank">看中国</a> | <a href="https://git.io/fjHpI" target="_blank">新纪元</a> | <a href="https://tt6.jugd53.ml/gmbbbxl/e12v" target="_blank">无界</a> | <a href="https://tt6.jugd53.ml/gmbbbxl/s8j" target="_blank">退党</a> | <a href="https://git.io/fjHpT" target="_blank">网门</a> | <a href="https://tt6.jugd53.ml/gmbbbxl/m4j" target="_blank">神韵</a> | <a href="https://tt6.jugd53.ml/gmbbbxl/k12v" target="_blank">圣缘</a> | <a href="https://tt6.jugd53.ml/gmbbbxl/x3t" target="_blank">明慧网</a> | <a href="https://tt6.jugd53.ml/gmbbbxl/c10v" target="_blank">正见网</a> | <a href="https://tt6.jugd53.ml/gmbbbxl/u9j" target="_blank">希望之声</a> | <a href="https://gitlab.com/szzdlab/w1/raw/master/5Vu3_XS2V.mp4" target="_blank">无罪辩护</a> |  <a href="https://gitlab.com/szzdlab/w5/raw/master/zjmd1_19.mp4" target="_blank">终级目的</a> |<a href="https://gitlab.com/szzdlab/w5/raw/master/mtdwh.mp4" target="_blank">漫谈党文化</a ></p><p><a href="https://tt6.jugd53.ml/gmbbbxl/t7y" target="_blank">大纪元</a> | <a href="https://tt6.jugd53.ml/gmbbbxl/k5y" target="_blank">新唐人</a> | <a href="https://git.io/JervF" target="_blank">亚太台</a> | <a href="https://git.io/fjHpG" target="_blank">直播</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2014-1-7/zfzx.mp4" target="_blank">伪火</a > | <a href="https://gitlab.com/szzdlab/w5/raw/master/5N.8.mp4" target="_blank">罪恶</a > | <a href="https://gitlab.com/szzdlab/w3/raw/master/9p.mp4" target="_blank">九评</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/wl.mp4" target="_blank">神话</a> | <a href="https://gitlab.com/szzdlab/w2/raw/master/3t/TdowhauWx9WiM.mp4" target="_blank">藏字石</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/szt.mp4" target="_blank">寻正道</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/wm.mp4" target="_blank">告诉未来</a > | <a href="https://gitlab.com/szzdlab/w3/raw/master/qh.mp4" target="_blank">清华学子</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2013-10-28/hongchaoyinmou-hi.mp4" target="_blank">红朝阴谋</a > |<a href="https://gitlab.com/szzdlab/w5/raw/master/fy.mp4" target="_blank">风雨天地行</a></p></td></tr>
 <tr><td VALIGN=TOP width="355" height="1000"><a href="https://github.com/xseksr305/djy/blob/master/gb/20/7/10/n12245413.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2020/07/GettyImages-1197147859-320x200.jpg"><p align="center">【最新疫情7·10】玻利维亚临时总统染疫</p></a>
 <a href="https://github.com/xseksr305/djy/blob/master/gb/20/7/10/n12245413.md#1" title="【最新疫情7·10】玻利维亚临时总统染疫""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/07/GettyImages-1197147859-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/xseksr305/djy/blob/master/gb/20/7/9/n12245205.md#1" title="陈全国被美制裁 制造多少惨案鲜为人知？""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/07/AAAA-320x200.jpeg">&nbsp;</a>
@@ -13,12 +13,12 @@
 <a href="https://github.com/xseksr305/djy/blob/master/gb/20/7/8/n12242651.md#1" title="马振宇苏州监狱遭酷刑 美议员：愿助营救""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/07/Chris-Smith-and-ZhangJPG-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/xseksr305/djy/blob/master/gb/20/5/28/n12143788.md#1" title="【康熙大帝】靳辅治河与康熙南巡""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/06/Kang-Xi-cover-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/xseksr305/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://xseksr305.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>14分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/xseksr305/djy/blob/master/gb/20/7/10/n12245481.md#1">【拍案惊奇】中共公检法整风 李嘉诚建香港城</a><br>
-:clock8: <em>31分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/xseksr305/djy/blob/master/gb/20/7/10/n12245624.md#1">上海闵行区面馆疑电池着火 致2死2伤</a><br>
-:clock8: <em>49分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/xseksr305/djy/blob/master/gb/20/7/10/n12245748.md#1">出席活动与确诊者接触  旧金山市长布里德自我隔离10天</a><br>
-:clock8: <em>55分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/xseksr305/djy/blob/master/gb/20/7/10/n12245734.md#1">单日死亡151人 加州疫情出现爆发以来高峰</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/xseksr305/djy/blob/master/gb/20/7/10/n12245618.md#1">【翻墙必看】王毅认怂 美国不买账</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/xseksr305/djy/blob/master/gb/20/7/10/n12245413.md#1">【最新疫情7·10】玻利维亚临时总统染疫</a><br>
+:clock8: <em>1分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/xseksr305/djy/blob/master/gb/20/7/10/n12245810.md#1">辨识空污主要成分 台遥测PM2.5技术领先全球</a><br>
+:clock8: <em>1分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/xseksr305/djy/blob/master/gb/20/7/10/n12245643.md#1">【记者手记】香港受害 美国社会也病了</a><br>
+:clock8: <em>3分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/xseksr305/djy/blob/master/gb/20/7/10/n12245658.md#1">警察举步维艰 退休申请激增</a><br>
+:clock8: <em>4分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/xseksr305/djy/blob/master/gb/20/7/10/n12245741.md#1">疫情中断旅游链 中共加大网路渗透统战台湾</a><br>
+:clock8: <em>9分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/xseksr305/djy/blob/master/gb/20/7/10/n12245655.md#1">曼哈顿超万套公寓空置  创纪录  房东降租</a><br>
+:clock8: <em>27分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/xseksr305/djy/blob/master/gb/20/7/10/n12245481.md#1">【拍案惊奇】中共公检法整风 李嘉诚建香港城</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/xseksr305/djy/blob/master/gb/20/7/8/n12240842.md#1">上海暴雨“中国第一高楼”多层楼漏水严重</a><br>
 <a href="https://github.com/xseksr305/djy/blob/master/gb/20/7/8/n12241667.md#1">贵州公交司机疑报复社会 中共禁媒体报导真相</a><br>
@@ -41,7 +41,7 @@
 
 ```diff
 !退出中共党、团、队总人数:
-!共 359,600,312 人
+!共 359,600,798 人
 ```
 </strong><p align="center"><strong align="center"><a href="https://x.co/dd3">我要退出中共党团队</a></strong></h2></td>
 <td VALIGN=TOP width="352">
