--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -1,5 +1,6 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/xsksmt389/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/xsksmt389/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/xsksmt389/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/xsksmt389/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/xsksmt389/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/xsksmt389/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/xsksmt389/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/xsksmt389/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/xsksmt389/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/xsksmt389/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/xsksmt389/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/xsksmt389/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/xsksmt389/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/xsksmt389/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/xsksmt389/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/xsksmt389/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/xsksmt389/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/xsksmt389/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/xsksmt389/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/xsksmt389/www/master/t/djy/12a.jpg" title="头条"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p> <a href="https://github.com/xsksmt389/www/blob/master/README.md#1" target="_blank">翻墙</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/wl.mp4" target="_blank">神话</a> | <a href="https://gitlab.com/szzdlab/v2/raw/master/hG75Ez1eTyeZN.mp4" target="_blank">归途</a> | <a href="https://gitlab.com/szzdlab/m1/raw/master/YongHeng-360p.mp4" target="_blank">永恒</a> | <a href="https://gitlab.com/szzdlab/m1/raw/master/Lijianhui-200804-720.mp4" target="_blank">回归</a> | <a href="https://gitlab.com/szzdlab/w3/raw/master/dmt.mp4" target="_blank">江鬼</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/szt.mp4" target="_blank">寻正道</a> | <a href="https://gitlab.com/szzdlab/w2/raw/master/rs/Uc6y.mp4" target="_blank">渐冻人</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2018-12-10/425.mp4" target="_blank">四二五</a> | <a href="https://gitlab.com/szzdlab/www/raw/master/v/2019-12-23/lin-720p.mp4" target="_blank">世界小姐</a> | <a href="https://gitlab.com/szzdlab/v2/raw/master/wnrl.mp4" target="_blank">为你而来</a> | <a href="https://gitlab.com/szzdlab/w1/raw/master/5Vu3_XS2V.mp4" target="_blank">无罪辩护</a> |  <a href="https://gitlab.com/szzdlab/w5/raw/master/zjmd1_19.mp4" target="_blank">终级目的</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/mtdwh.mp4" target="_blank">漫谈党文化</a></p><p><a href="https://gitlab.com/szzdlab/w3/raw/master/9p.mp4" target="_blank">九评</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2014-1-7/zfzx.mp4" target="_blank">伪火</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2018-12-14/1400forge-1210.mp4" target="_blank">剖析</a> | <a href="https://gitlab.com/szzdlab/v1/raw/master/2017-7-5/3-JTT_CN_MH-360p.mp4" target="_blank">旅程</a> | <a href="https://gitlab.com/szzdlab/v1/raw/master/2017-7-5/5-YiSu_MH-360p.mp4" target="_blank">义诉</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/5N.8.mp4" target="_blank">罪恶</a> | <a href="https://gitlab.com/szzdlab/m1/raw/master/TdowhauWx9WiM.mp4" target="_blank">藏字石</a> | <a href="https://gitlab.com/szzdlab/v1/raw/master/2017-7-5/1-Xuezhongmei_MH-360p.mp4" target="_blank">雪中梅</a> | <a href="https://gitlab.com/szzdlab/www/raw/master/v/2019-2-21/guanguimin.mp4" target="_blank">歌唱家</a> | <a href="https://gitlab.com/szzdlab/www/raw/master/v/2019-6-18/huangxiaomin-tuidang.mp4" target="_blank">奥运名将</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/wm.mp4" target="_blank">告诉未来</a> | <a href="https://gitlab.com/szzdlab/w3/raw/master/qh.mp4" target="_blank">清华学子</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2013-10-28/hongchaoyinmou-hi.mp4" target="_blank">红朝阴谋</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/fy.mp4" target="_blank">风雨天地行</a></p></td></tr>
-<tr><td VALIGN=TOP width="355" height="1000"><a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/18/n12484566.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2020/10/IMG_2122-320x200.jpg"><p align="center">【大时代华人】一家挺川反共的纽约教会</p></a>
+<tr><td VALIGN=TOP width="355" height="1000"><a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/18/n12485003.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2020/06/000_1QR3K3-320x200.jpg"><p align="center">伊朗称联合国武器禁运到期 蓬佩奥强烈回应</p></a>
+<a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/18/n12485003.md#1" title="伊朗称联合国武器禁运到期 蓬佩奥强烈回应""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/06/000_1QR3K3-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/18/n12484566.md#1" title="【大时代华人】一家挺川反共的纽约教会""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/10/IMG_2122-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/18/n12484690.md#1" title="钟原：中共政治局学习量子科技难解困境""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-902793308-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/18/n12484524.md#1" title="疫情期间 大陆“罚款经济”愈发严重""><img width="73" src="https://i.epochtimes.com/assets/uploads/2011/03/1103102129062320-320x200.jpg">&nbsp;</a>
@@ -11,14 +12,13 @@
 <a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/14/n12476425.md#1" title="受中共科技专制拖累 科企出国路几近被堵死""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-969527060-600x400-1-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/18/n12483848.md#1" title="田云：电脑门发酵 拜登竞选经理自曝民调不实""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/10/biden-and-harris-2-1200x800-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/11/n12468511.md#1" title="【最新疫情10.18】全球单日新病例首破40万""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1228396688-320x200.jpg">&nbsp;</a>
-<a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/16/n12480830.md#1" title="【重播】川普威斯康星州演讲 支持执法机构""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1229134416-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/xsksmt389/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://xsksmt389.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>37分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/18/n12484792.md#1">洪金宝拄拐杖近照曝光 网民惊讶</a><br>
-:clock8: <em>48分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/18/n12484566.md#1">【大时代华人】一家挺川反共的纽约教会</a><br>
+:clock8: <em>8分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/18/n12485003.md#1">伊朗称联合国武器禁运到期 蓬佩奥强烈回应</a><br>
+:clock8: <em>49分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/18/n12484792.md#1">洪金宝拄拐杖近照曝光 网民惊讶</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/18/n12484566.md#1">【大时代华人】一家挺川反共的纽约教会</a><br>
 :clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/18/n12484555.md#1">【川普集会】密州共和党主席： 川普应连任</a><br>
 :clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/18/n12484864.md#1">中国欧盟商会：对中共加强民企统战表示担忧</a><br>
 :clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/18/n12484874.md#1">亚美尼亚和阿塞拜疆互指对方违反新停火协议</a><br>
-:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/18/n12484717.md#1">美航迈阿密—纽约航线 年底交737 Max执飞</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/17/n12482129.md#1">赵立坚诬蔑美军播毒论令川普愤怒至极</a><br>
 <a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/17/n12482636.md#1">大陆二手房市场分化严重 房地产泡沫要破？</a><br>
@@ -42,7 +42,7 @@
 
 ```diff
 !退出中共党、团、队总人数:
-!共 365,785,252 人
+!共 365,785,283 人
 ```
 </strong><p align="center"><strong align="center"><a href="https://x.co/dd3">我要退出中共党团队</a></strong></h2></td>
 <td VALIGN=TOP width="352">
