--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -13,12 +13,12 @@
 <a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/18/n12483848.md#1" title="田云：电脑门发酵 拜登竞选经理自曝民调不实""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/10/biden-and-harris-2-1200x800-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/11/n12468511.md#1" title="【最新疫情10.18】全球单日新病例首破40万""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1228396688-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/xsksmt389/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://xsksmt389.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>8分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/18/n12485003.md#1">伊朗称联合国武器禁运到期 蓬佩奥强烈回应</a><br>
-:clock8: <em>49分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/18/n12484792.md#1">洪金宝拄拐杖近照曝光 网民惊讶</a><br>
+:clock8: <em>26分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/18/n12485003.md#1">伊朗称联合国武器禁运到期 蓬佩奥强烈回应</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/18/n12484792.md#1">洪金宝拄拐杖近照曝光 网民惊讶</a><br>
 :clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/18/n12484566.md#1">【大时代华人】一家挺川反共的纽约教会</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/18/n12484555.md#1">【川普集会】密州共和党主席： 川普应连任</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/18/n12484864.md#1">中国欧盟商会：对中共加强民企统战表示担忧</a><br>
-:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/18/n12484874.md#1">亚美尼亚和阿塞拜疆互指对方违反新停火协议</a><br>
+:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/18/n12484555.md#1">【川普集会】密州共和党主席： 川普应连任</a><br>
+:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/18/n12484864.md#1">中国欧盟商会：对中共加强民企统战表示担忧</a><br>
+:clock8: <em>3小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/18/n12484874.md#1">亚美尼亚和阿塞拜疆互指对方违反新停火协议</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/17/n12482129.md#1">赵立坚诬蔑美军播毒论令川普愤怒至极</a><br>
 <a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/17/n12482636.md#1">大陆二手房市场分化严重 房地产泡沫要破？</a><br>
@@ -42,7 +42,7 @@
 
 ```diff
 !退出中共党、团、队总人数:
-!共 365,785,283 人
+!共 365,785,335 人
 ```
 </strong><p align="center"><strong align="center"><a href="https://x.co/dd3">我要退出中共党团队</a></strong></h2></td>
 <td VALIGN=TOP width="352">
